--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="background">
   <div class="container-fluid">
-      <a class="-brand" href="index.html">Tina Karanovic</a>
+      <a class="-brand" href="index.html">Monika Karanovic</a>
    
     <div class="nav2">
     <ul class="nav navbar-nav">
